add mobile code

--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -747,7 +747,7 @@
 }
 .btn-orange:hover,
 .btn-orange:active {
-  background-color: #004393;
+  background-color: #2B7D86;
 }
 .btn-dark {
   color: #fff;
