tweak login button

--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -266,7 +266,8 @@ h4 {
 }
 
 nav {
-  padding: 0 0 12px 0;
+  height: 56px;
+  padding: 0 0 7px 0;
   font-size: 14px;
   position: fixed;
   background-color: @white;
@@ -296,20 +297,21 @@ br {
   .nav-item-logo,
   .nav-item-sign {
     display: inline-block;
-    padding-top: 16px;
+    padding-top: 18px;
   }
 
   .nav-item-logo {
     width: 200px;
-    margin-top: 3px;
+    margin-top: 0;
     margin-left: 24px;
     margin-bottom: -3px;
+    padding-top: 16px;
     float: left;
   }
 
   .nav-item-sign {
     float: right;
-    margin-right: 24px;
+    margin-right: 20px;
   }
 
   .nav-wrap-items {
