--- a/embold-blue.com/css/embold.css
+++ b/embold-blue.com/css/embold.css
@@ -816,7 +816,8 @@ h4 {
   text-transform: uppercase;
 }
 nav {
-  padding: 0 0 12px 0;
+  height: 56px;
+  padding: 0 0 7px 0;
   font-size: 14px;
   position: fixed;
   background-color: #fff;
@@ -842,18 +843,19 @@ br {
 .nav-grid .nav-item-logo,
 .nav-grid .nav-item-sign {
   display: inline-block;
-  padding-top: 16px;
+  padding-top: 18px;
 }
 .nav-grid .nav-item-logo {
   width: 200px;
-  margin-top: 3px;
+  margin-top: 0;
   margin-left: 24px;
   margin-bottom: -3px;
+  padding-top: 16px;
   float: left;
 }
 .nav-grid .nav-item-sign {
   float: right;
-  margin-right: 24px;
+  margin-right: 20px;
 }
 .nav-grid .nav-wrap-items {
   display: inline-block;
