--- a/embold-blue.com/css/media-query.less
+++ b/embold-blue.com/css/media-query.less
@@ -1,9 +1,66 @@
 // out: media-query.css
 
+@import url("color-chart.less");
+.sofia {
+  font-family: 'Sofia Pro', sans-serif;
+  letter-spacing: -0.005em;
+}
+
+.acumin {
+  font-family: 'Acumin Pro', sans-serif;
+}
+
+.background-no-repeat {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.box-shadow {
+  -webkit-box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.14);
+     -moz-box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.14);
+          box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.14);
+}
+
+.box-shadow-none {
+  -webkit-box-shadow: 0 !important;
+     -moz-box-shadow: 0 !important;
+          box-shadow: 0 !important;
+}
+
+.transition {
+  transition: all 0.5s;
+}
+
+.icon {
+  width: 48px;
+  height: 48px;
+  margin-top: 4px;
+  margin-right: 12px;
+  .background-no-repeat;
+}
+
+.body-illustration {
+  height: 300px;
+  background-size: auto 100%;
+}
+
 @media only screen and (min-device-width : 375px) and (max-device-width : 812px) {
+  .container-fluid {
+    width: 100%;
+  }
+
   .index {
     .block {
       padding: 24px 0;
+
+      .block-description {
+        width: 100%;
+      }
     }
 
     h2 {
@@ -17,10 +74,13 @@
 
   .header-image {
     width: 100%;
-    height: 450px;
+    height: 400px;
     position: relative;
-    background-size: 160%;
-    background-position: top right;
+    background-size: 100%;
+    background-position: center;
+    background-image: url('../images/header-index-hero-mobile.png');
+    top: auto;
+    right: auto;
   }
 
   .block-index-hero {
@@ -31,39 +91,201 @@
       margin-bottom: 0;
 
       h1.headcopy {
-        font-size: 3.2em;
+        font-size: 3em;
       }
     }
   }
 
   .block-index-workflow {
+    background-color: @gray200;
+
+    .wrap-workflow {
+      display: block;
+      width: 100%;
+      border-radius: 8px;
+      position: relative;
+      .text-center;
+
+      .wrap-animation {
+        display: block;
+        height: 230px;
+        position: relative;
+
+        .item-logo {
+          height: 60px;
+          background-color: @white;
+          margin-bottom: 0.8em;
+          background-repeat: no-repeat;
+          background-position: center center;
+          .box-shadow;
+          .transition;
+        }
+
+        .logo-github {
+          width: 140px;
+          left: 3em;
+          position: absolute;
+          background-image: url('../images/logo-github.svg');
+          background-size: 90% auto;
+        }
+
+        .logo-bitbucket {
+          width: 200px;
+          top: 72px;
+          right: 0.5em;
+          position: absolute;
+          background-image: url('../images/logo-bitbucket.svg');
+          background-size: 70% auto;
+        }
+
+        .logo-jenkins {
+          width: 160px;
+          top: 144px;
+          left: 1em;
+          position: absolute;
+          background-image: url('../images/logo-jenkins.svg');
+          background-size: 70% auto;
+        }
+
+        .logo-embold {
+          width: 80%;
+          height: 140px;
+          margin-left: 10%;
+          background-color: @white;
+          background-repeat: no-repeat;
+          background-position: center center;
+          background-image: url('../images/logo-embold.svg');
+          background-size: 70% auto;
+          position: absolute;
+          top: 35px;
+          .box-shadow;
+        }
+
+        .index-step-3 {
+          width: 200px;
+          height: 200px;
+          margin: auto auto;
+          background-color: @white;
+          background-repeat: no-repeat;
+          background-position: center center;
+          // background-image: url('../images/index-step-3.svg');
+          background-size: auto 100%;
+          border-radius: 8px;
+        }
+      }
+
+      .step-number {
+        display: inline-block;
+        width: 1.3em;
+        height: 1.3em;
+        font-size: 2.4em;
+        margin: 0.4em;
+        font-weight: 300;
+        border-radius: 0.7em;
+        color: @white !important;
+        background-color: @blue800;
+      }
+
+      .step-title {
+        margin: -9px 0 0 0;
+        padding: 0;
+        font-size: 1.4em;
+        .sofia;
+      }
+
+      .description {
+        color: @gray600;
+        font-size: 0.9em;
+      }
+    }
+
     .index-arrow {
       display: none;
     }
+  }
 
-    .wrap-workflow {
-      height: auto;
+  .block-index-features {
+    .il-index-features {
+      width: 90%;
+      height: 270px;
+      margin-bottom: 1.5em;
+      background-size: auto 80%;
+    }
 
-      .wrap-animation {
-        height: auto;
+    .description {
+      color: @gray600;
+      margin-top: auto;
+      font-size: 1rem;
+      font-weight: normal;
+    }
+  }
 
-        .logo-jenkins:after {
-          display: block;
-          content: '';
-          clear: both;
-        }
+  .block-index-user-stories {
+    .wrap-user {
+      height: 120px;
+      padding: 1.4em;
+      background-image: none;
+      position: relative;
+
+      .role {
+        margin-top: 0;
+        font-size: 1.8em;
       }
 
-      .wrap-text {
-        .description {
-          visibility: visible;
-        }
-      }
-
-      .wrap-animation,
-      .wrap-text {
+      .description {
         display: block;
-        position: relative;
+        width: 100%;
+        height: 2em;
+        margin-top: 0.3em;
+        color: @gray700;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+      }
+
+      .link-arrow {
+        opacity: 1;
+        top: 24px;
+        left: auto;
+        right: 14px;
+      }
+    }
+  }
+
+  .block-index-partnership {
+    .wrap-logo {
+      display: none;
+    }
+  }
+
+  .block-footer {
+    display: none;
+  }
+
+  .block-footer-mobile {
+    display: block;
+    color: @gray600;
+    font-size: 13px;
+    padding: 32px 0 48px 0;
+    background-color: @gray200;
+
+    .wrap-menu {
+      width: 50%;
+      margin-bottom: 16px;
+      float: left;
+      position: relative;
+
+      h4 {
+        color: @gray800;
+        margin: 0 0 8px 0;
+        padding: 0;
+        font-size: 16px;
+        text-transform: uppercase;
+      }
+
+      .nav-menu-link {
+        display: block;
+        margin-bottom: 5px;
       }
     }
   }
