--- a/embold-blue.com/css/media-query.less
+++ b/embold-blue.com/css/media-query.less
@@ -72,9 +72,17 @@
     display: none;
   }
 
+  #nav-mobile {
+    display: block;
+    padding: 0 0 0 0.8em;
+    position: relative;
+    z-index: 5;
+    .box-shadow;
+  }
+
   .header-image {
     width: 100%;
-    height: 400px;
+    height: 340px;
     position: relative;
     background-size: 100%;
     background-position: center;
@@ -290,7 +298,117 @@
     }
   }
 
+  .block-footer-contact {
+    height: auto;
+  }
+
+  .block-mobile {
+    margin-bottom: 3em;
+  }
+
+  .bg-fw-half-left,
+  .bg-fw-half-right {
+    display: none;
+  }
+
   .intercom {
     display: none;
   }
 }
+
+
+#nav-mobile ul li a {
+  color: @gray800;
+  text-decoration: none;
+  .sofia;
+}
+/* End General */
+
+/* Start #nav-mobilebar */
+#nav-mobile ul {
+  width: 100%;
+  background-color: white;
+  margin: 0;
+  padding: 0.8em 0.8em 0.6em 0.4em;
+  z-index: 4;
+  position: relative;
+}
+#nav-mobile ul > li {
+  padding: 0;
+  display: inline-block;
+  transition: all .3s ease;
+  margin-left: -5px
+}
+#nav-mobile ul > li:not(:last-of-type):hover {
+  background-color: @gray200;
+}
+#nav-mobile ul > li:first-of-type {
+  margin-top: 3px;
+
+}
+#nav-mobile ul > li:last-of-type {
+  float: right;
+}
+#nav-mobile ul > li:last-of-type a .fa {
+  font-size: 21px;
+}
+/* End #nav-mobilebar */
+
+/* Start Menue Right */
+#nav-mobile ul > li:last-of-type {
+  position: relative;
+  display: none;
+}
+#nav-mobile ul > ol {
+  position: absolute;
+  top: 54px;
+  right: 0;
+  background: @gray300;
+  text-align: center;
+  list-style: none;
+  display: none;
+  .box-shadow;
+}
+#nav-mobile ul > ol > li {
+  width: 100vw;
+  color: #FFF;
+  margin: 0;
+  padding: 0;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  border-bottom: 1px solid @white;
+  transition: all .3s ease;
+}
+#nav-mobile ul > ol > li:hover a {
+  margin: 20px;
+}
+#nav-mobile ul > ol > li:hover {
+  background: #000;
+  cursor: pointer
+}
+#nav-mobile ul input {
+  opacity: .7;
+  padding: 5px;
+  flot: right;
+  display: none
+}
+/* Start Menue Right */
+
+/* Start Media Query */
+@media screen and (max-width:680px){
+  #nav-mobile ul > li:not(:first-child) {
+    display:none
+  }
+  #nav-mobile ul > li:last-of-type {
+    display: block
+  }
+  #nav-mobile ul input {
+    display: inline
+  }
+}
+@media screen and (min-width:680px) {
+  #nav-mobile ul > ol > li {
+    display:none
+  }
+}
+/* End Media Query */
