--- a/embold-blue.com/css/media-query.css
+++ b/embold-blue.com/css/media-query.css
@@ -39,7 +39,7 @@
   height: 300px;
   background-size: auto 100%;
 }
-@media only screen and (max-device-width: 812px) {
+@media only screen and (max-width: 813px) {
   .container-fluid {
     width: 100%;
   }
@@ -57,12 +57,24 @@
   }
   #nav-mobile {
     display: block;
-    padding: 0 0 0 0.8em;
+    padding: 16px 16px 8px 16px;
     position: relative;
     z-index: 5;
     -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
     -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
+  }
+  #nav-mobile .btn-mobile-nav {
+    width: 36px;
+    height: 36px;
+    top: 5px;
+    right: 8px;
+    background-image: url('../images/ic-md-nav.svg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border: 0;
+    position: absolute;
+    background-color: transparent;
   }
   .header-image {
     width: 100%;
@@ -264,94 +276,84 @@
   .intercom {
     display: none;
   }
-  #nav-mobile ul > li:not(:first-child) {
+  .nav-mobile-full-screen {
+    color: #fff;
+    background-color: #2A3141;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    position: fixed;
+    z-index: 999;
+    visibility: hidden;
+    transition: all 0.5s;
+  }
+  .nav-mobile-full-screen .nav-mobile-full-screen--middle {
+    padding: 2em;
+  }
+  .nav-mobile-full-screen .nav-mobile-full-screen--middle ul {
+    margin: 0;
+    padding: 0;
+  }
+  .nav-mobile-full-screen .nav-mobile-full-screen--middle ul li {
+    width: 100%;
+    margin-bottom: 16px;
+    padding-bottom: 16px;
+    list-style: none;
+    border-bottom: 1px solid #3C4352;
+    font-size: 1.8em;
+    font-family: 'Sofia Pro', sans-serif;
+    letter-spacing: -0.005em;
+  }
+  .nav-mobile-full-screen .nav-mobile-full-screen--middle ul li.primary-menu {
+    background-image: url('../images/ic-md-arrow-right-no-line-wh.svg');
+    background-position: top 4px right;
+    background-repeat: no-repeat;
+    background-size: auto 50%;
+  }
+  .nav-mobile-full-screen .nav-mobile-full-screen--middle .logo-embold {
+    margin-bottom: 48px;
+  }
+  .nav-mobile-full-screen .nav-mobile-full-screen--middle .menu-toggle--close {
+    color: #fff;
+    top: 24px;
+    right: 24px;
+    position: absolute;
+  }
+  .nav-mobile-full-screen--sub {
+    color: #fff;
+    background-color: #21ABB0;
+    z-index: 1000;
+    transition: all 0.5s;
+  }
+  .nav-mobile-full-screen--sub .title {
+    font-size: 1.2em;
+    margin-bottom: 50px;
+    padding-left: 24px;
+    font-family: 'Sofia Pro', sans-serif;
+    letter-spacing: -0.005em;
+    background-image: url('../images/ic-md-arrow-left-no-line-wh.svg');
+    background-repeat: no-repeat;
+    background-position: top left -4px;
+    background-size: auto 90%;
+  }
+  .nav-mobile-full-screen--sub ul li {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+  }
+  .nav-mobile-full-screen-open {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+  .scroll-off {
     display: none;
   }
-  #nav-mobile ul > li:last-of-type {
-    display: block;
-  }
-  #nav-mobile ul input {
-    display: inline;
-  }
 }
-#nav-mobile ul li a {
-  color: #2A3141;
-  text-decoration: none;
-  font-family: 'Sofia Pro', sans-serif;
-  letter-spacing: -0.005em;
-}
-/* End General */
-/* Start #nav-mobilebar */
-#nav-mobile ul {
-  width: 100%;
-  background-color: white;
-  margin: 0;
-  padding: 0.8em 0.8em 0.6em 0.4em;
-  z-index: 4;
-  position: relative;
-}
-#nav-mobile ul > li {
-  padding: 0;
-  display: inline-block;
-  transition: all .3s ease;
-  margin-left: -5px;
-}
-#nav-mobile ul > li:not(:last-of-type):hover {
-  background-color: #F5F6F8;
-}
-#nav-mobile ul > li:first-of-type {
-  margin-top: 3px;
-}
-#nav-mobile ul > li:last-of-type {
-  float: right;
-}
-#nav-mobile ul > li:last-of-type a .fa {
-  font-size: 21px;
-}
-/* End #nav-mobilebar */
-/* Start Menue Right */
-#nav-mobile ul > li:last-of-type {
-  position: relative;
-  display: none;
-}
-#nav-mobile ul > ol {
-  position: absolute;
-  top: 54px;
-  right: 0;
-  background: #ECEDEF;
-  text-align: center;
-  list-style: none;
-  display: none;
-  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-}
-#nav-mobile ul > ol > li {
-  width: 100vw;
-  color: #FFF;
-  margin: 0;
-  padding: 0;
-  padding-top: 14px;
-  padding-bottom: 14px;
-  border-bottom: 1px solid #fff;
-  transition: all .3s ease;
-}
-#nav-mobile ul > ol > li:hover a {
-  margin: 20px;
-}
-#nav-mobile ul > ol > li:hover {
-  background: #000;
-  cursor: pointer;
-}
-#nav-mobile ul input {
-  opacity: .7;
-  padding: 5px;
-  flot: right;
-  display: none;
-}
-@media screen and (min-device-width: 814px) {
+@media screen and (min-width: 814px) {
   #nav-mobile ul > ol > li {
     display: none;
   }
 }
-/* End Media Query */
