--- a/embold-blue.com/css/index-steps.less
+++ b/embold-blue.com/css/index-steps.less
@@ -1,4 +1,4 @@
-@media only screen and (min-device-width : 1025px) {
+@media only screen and (min-width : 813px) {
   .workflow-hover-effect {
     .wrap-text {
       top: 210px;
