--- a/embold-blue.com/css/media-query.less
+++ b/embold-blue.com/css/media-query.less
@@ -375,6 +375,8 @@
         top: 24px;
         right: 24px;
         position: absolute;
+        border: 0;
+        background-color: transparent;
       }
     }
   }
