--- a/embold-blue.com/css/media-query.css
+++ b/embold-blue.com/css/media-query.css
@@ -76,6 +76,9 @@
     position: absolute;
     background-color: transparent;
   }
+  .nav-mobile-full-screen {
+    display: block;
+  }
   .header-image {
     width: 100%;
     height: 340px;
