--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -175,11 +175,13 @@
   background-color: @gray850;
 }
 
+.btn-secondary,
 .btn-orange {
   color: @white;
   background-color: @blue800;
 }
-
+.btn-secondary:hover,
+.btn-secondary:active,
 .btn-orange:hover,
 .btn-orange:active {
   background-color: @blue900;
