Wrap up Filename / Adding mobile nav to all page

--- a/embold-blue.com/css/embold.less
+++ b/embold-blue.com/css/embold.less
@@ -292,8 +292,9 @@ nav {
   display: none;
 }
 
+strong,
 br {
-  line-height: 1.2;
+  line-height: inherit;
 }
 
 .nav-grid {
@@ -1888,3 +1889,5 @@ section.press-releases {
 .nav-mobile-full-screen {
   display: none;
 }
+
+@import url("media-query.less");
