--- a/embold-blue.com/css/media-query.css
+++ b/embold-blue.com/css/media-query.css
@@ -52,6 +52,16 @@
   .index h2 {
     font-size: 2.4em;
   }
+  .index .header-image {
+    width: 100%;
+    height: 340px;
+    position: relative;
+    background-size: 100%;
+    background-position: center;
+    background-image: url('../images/header-index-hero-mobile.png');
+    top: auto;
+    right: auto;
+  }
   .nav-index {
     display: none;
   }
@@ -78,16 +88,6 @@
   }
   .nav-mobile-full-screen {
     display: block;
-  }
-  .header-image {
-    width: 100%;
-    height: 340px;
-    position: relative;
-    background-size: 100%;
-    background-position: center;
-    background-image: url('../images/header-index-hero-mobile.png');
-    top: auto;
-    right: auto;
   }
   .block-index-hero {
     height: auto;
@@ -276,6 +276,25 @@
   .bg-fw-half-right {
     display: none;
   }
+  .block-header-sub .header-sub-title {
+    padding-top: 75px;
+    font-size: 2.3em;
+    text-align: center !important;
+    line-height: 1.3;
+    z-index: 5;
+    position: relative;
+  }
+  .block-header-sub .header-image {
+    width: 100% !important;
+    height: 180px !important;
+    background-position: top center !important;
+    top: -24px !important;
+    z-index: 1 !important;
+  }
+  .block-section-sub .section-title {
+    font-size: 1.8em;
+    margin-top: 0;
+  }
   .intercom {
     display: none;
   }
@@ -329,7 +348,7 @@
   }
   .nav-mobile-full-screen .nav-mobile-full-screen--middle .wrap-sign {
     width: 100%;
-    padding: 16px;
+    padding: 24px 16px;
     bottom: 0;
     left: 0;
     position: fixed;
@@ -372,11 +391,6 @@
     transform: scale(1);
   }
   .scroll-off {
-    display: none;
-  }
-}
-@media screen and (min-width: 814px) {
-  #nav-mobile ul > ol > li {
     display: none;
   }
 }
